=== HEAD

* Add a UpdatePrimaryKey plugin that allows you to update the primary key of a model object (jeremyevans)

* Add a SkipCreateRefresh plugin that skips the refresh when saving new model objects (jeremyevans)

* Add a StringStripper plugin that strips strings before assigning them to model attributes (jeremyevans)

* Allow the :eager_loader association proc to accept a single hash instead of 3 arguments (jeremyevans)

* Add a Dataset#order_append alias for order_more, for consistency with order_prepend (jeremyevans)

* Add a Dataset#order_prepend method that adds to the end of an existing order (jeremyevans)

* Add a Sequel::NotImplemented exception class, use instead of NotImplementedError (jeremyevans)

* Correctly handle more than 2 hierarchy levels in the single table inheritance plugin (jeremyevans)

* Allow using a custom column value<->class mapping to the single_table_inheritance plugin (jeremyevans, tmm1)

* Handle SQL::Identifiers in the schema_dumper extension (jeremyevans) (#304)

* Make sure certain alter table operations clear the schema correctly on MySQL (jeremyevans) (#301)

* Fix leak of JDBC Statement objects when using transactions on JDBC on databases that support savepoints (jeremyevans)

* Add DatabaseDisconnectError support to the ODBC adapter (Joshua Hansen)

* Make :encoding option work on MySQL in some cases where it was ignored (jeremyevans) (#300)

* Make Model::Errors#on always return nil if there are no errors on that attribute (jeremyevans)

* When using multiple plugins that add before hooks, the order that the hooks are called may have changed (jeremyevans)

* The hook_class_methods plugin no longer skips later after hooks if earlier after hooks return false (jeremyevans)

* Add Model#set_fields and update_fields, similar to set_only and update_only but ignoring other keys in the hash (jeremyevans)

* Add Model.qualified_primary_key_hash, similar to primary_key_hash but with qualified columns (jeremyevans)
